# vm-service

./: .gitignore  README.md  leo-service.py  plusclouds.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
api/: leo_finder.py  metadata.py
log/: initialize.py
machine/: distribution.py  uuid.py
package/: management.py
plusclouds-service/: requirements.txt  service.py  storage.py
plusclouds-service/module_search/: ansible_operations.py  callback_agent.py  service_search.py
plusclouds-service/util/ssh_keys/: ssh_key_parser.py
service/: __main__.py
service/linux/: generic.py  host_configuration.py
service/linux/disk/: check.py  extend.py  manage_disk.py
service/linux/users/: password.py  ssh_keys.py
service/module_search/: ansible_operations.py  callback_agent.py  service_search.py
service/service_roles/: deployment.py
service/windows/: generic.py  host_configuration.py
service/windows/disk/: manage_disk.py
service/windows/users/: password.py
utils/: file.py
