[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "vm-service"
version = "1.0.0"
authors = [
  { name="Harun Baris Bulut", email="baris.bulut@plusclouds.com"},
]
description = "Virtual Machine Deployment Agent for PlusClouds ecosystem"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows Server 2008",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "distro==1.8.0",
    "requests==2.28.1",
]

[project.urls]
"Homepage" = "https://github.com/plusclouds/vm-service"
"Bug Tracker" = "https://github.com/plusclouds/vm-service/issues"
